--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -57,9 +57,41 @@
     100% {opacity: 1;}
 }
 
+/* IPAD QUERIE */
+
+@media(max-width: 1000px){
+    .about-container{
+        height: 90vh;
+        width: 100vw;
+        padding-left: 5px;
+        padding-bottom: 40px;
+        font-family: Karla;
+        animation-name: about-page-load;
+        animation-duration: 4s;
+        overflow: hidden;
+    }
+
+    .about-bio{
+        height: auto;
+        width: 90vw;
+        text-align: start;
+        word-wrap: break-word;
+        margin-bottom: 0px;
+        margin-left: 40px;
+    }
+
+    #view-my-work{
+        margin-top: 30px;
+        width: 100vw;
+        text-align: center;
+    }
+}
+
+/* IPHONE QUERIE */
+
 @media(max-width: 500px){
     .about-container{
-        height: auto;
+        height: 90vh;
         width: 100vw;
         padding-left: 5px;
         padding-bottom: 40px;
@@ -70,11 +102,11 @@
 
     .about-bio{
         height: auto;
-        width: 370px;
+        width: 90vw;
         text-align: start;
         word-wrap: break-word;
-        overflow: scroll;
         margin-bottom: 0px;
+        margin-left: 20px;
     }
 
     .about-header{
@@ -109,33 +141,3 @@
     }
 }
 
-/* IPAD QUERIE */
-
-@media(max-width: 1000px){
-    .about-container{
-        height: auto;
-        width: 100vw;
-        padding-left: 5px;
-        padding-bottom: 40px;
-        font-family: Karla;
-        animation-name: about-page-load;
-        animation-duration: 4s;
-        /* overflow: hidden; */
-    }
-
-    .about-bio{
-        height: auto;
-        width: 90vw;
-        text-align: start;
-        word-wrap: break-word;
-        margin-bottom: 0px;
-        margin-left: 40px;
-    }
-
-    #view-my-work{
-        margin-top: 30px;
-        width: 100vw;
-        height: 250px;
-        text-align: center;
-    }
-}
