--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -149,6 +149,72 @@ a {
   }
 }
 
+/* IPAD QUERIE */
+
+@media(max-width: 1024px){
+
+  .landing-container {
+    height: 90vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Karla;
+    overflow: hidden;
+  }
+
+  .landing-portrait {
+    height: 700px;
+    width: 100vw;
+    background-image: url("./IMG_5638.JPG");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+    position: absolute;
+    bottom: 0;
+    animation-name: image;
+    animation-duration: 4s;
+    z-index: 1;
+  }
+
+  .landing-about-container {
+    height: 200px;
+    width: 100vw;
+    line-height: 40px;
+    margin-top: -690px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: none;
+    word-wrap: break-word;
+  }
+  .landing-name {
+    font-size: 60px;
+  }
+  
+  .landing-title {
+    font-size: 80px;
+    height: 0px;
+    margin-top: -25px;
+  }
+  
+  .landing-about {
+    display: none;
+  }
+  
+  #landing-learn-more {
+    width: 200px;
+    color: orange;
+    font-weight: 500;
+    font-size: 25px;
+    margin-top: -10px;
+    margin-right: 300px
+  }
+}
+
+/* IPHONE QUERIE  */
+
 @media (max-width: 500px) {
   .landing-container {
     display: block;
@@ -162,18 +228,18 @@ a {
     justify-content: center;
     width: 100vw;
     height: 400px;
-    /* -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-      both;
-    animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
+    margin-top: -80px;
   }
 
   .landing-name {
     font-size: 50px;
+    /* margin-top: 50px; */
+
   }
 
   .landing-title {
     font-size: 35px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
   }
 
   .landing-about {
@@ -185,7 +251,6 @@ a {
     position: absolute;
     font-size: 20px;
     width: 100vw;
-    margin-left: -20px;
     color: orange;
     bottom: 0;
     z-index: 1;
@@ -298,67 +363,4 @@ a {
   }
 }
 
-/* IPAD QUERIE */
 
-@media(max-width: 1000px){
-
-  .landing-container {
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Karla;
-    overflow: hidden;
-  }
-
-  .landing-portrait {
-    height: 750px;
-    width: 100vw;
-    background-image: url("./IMG_5638.JPG");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
-    position: absolute;
-    bottom: 0;
-    animation-name: image;
-    animation-duration: 4s;
-    z-index: 1;
-  }
-
-  .landing-about-container {
-    height: 300px;
-    width: 100vw;
-    line-height: 40px;
-    margin-top: -700px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    background-color: none;
-    word-wrap: break-word;
-    z-index: 0;
-  }
-  .landing-name {
-    font-size: 60px;
-  }
-  
-  .landing-title {
-    font-size: 80px;
-    height: 0px;
-    margin-top: -25px;
-  }
-  
-  .landing-about {
-    display: none;
-  }
-  
-  #landing-learn-more {
-    width: 200px;
-    color: orange;
-    font-weight: 500;
-    font-size: 25px;
-    margin-top: -10px;
-    margin-right: 300px
-  }
-}
