--- a/src/Components/Music/music.css
+++ b/src/Components/Music/music.css
@@ -65,7 +65,28 @@
       opacity: 1;
     }
   }
+
+  /* IPAD QUERIE  */
+
+@media(max-width: 1000px){
+  .music-container{
+    overflow: scroll;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.music-container iframe{
+    margin-top: 20px;
+    width: 550px;
+    height: 600px;
+    -webkit-animation: slide-in-bottom 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      animation: slide-in-bottom 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+}
   
+  /* IPHONE QUERIE  */
 
 @media(max-width: 500px){
     .music-container{
@@ -119,22 +140,3 @@
     }
 }
 
-/* IPAD QUERIE  */
-
-@media(max-width: 1000px){
-  .music-container{
-    overflow: scroll;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.music-container iframe{
-    margin-top: 20px;
-    width: 550px;
-    height: 600px;
-    -webkit-animation: slide-in-bottom 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-in-bottom 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-}
