--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -1,128 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
 .portfolio-container{
-    height: 90vh;
-    width: 100vw;
-    font-family: Karla;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  height: 90vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: Karla;
 }
 
 .portfolio-header{
-    width: 100vw;
-    height: 45vh;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    /* position: fixed; */
+  margin: 0px 0px 50px;
 }
 
-.portfolio-header h1{
-  font-size: 60px;
-    -webkit-animation: focus-in-expand-fwd 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: focus-in-expand-fwd 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation-duration: 1.5s;
-}
-
-.hooligin-web-project{
-    width: 93vw;
-    height: 70vh;
-    display: flex;
-    flex-direction: row;
-    text-align: start;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    margin-bottom: 40px;
-    box-shadow: 5px 10px 18px #888888;
-    -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    contain: content;
+.porfolio-project-container{
+  width: 90vw;
+  height: 275px;
+  text-align: start;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .project-specs-container{
-  margin-left: -60px;
+  margin-left: 25px;
 }
 
 #learn-more{
-  font-size: 25px;
-  margin-top: -10px;
   color: orange;
   font-weight: 600;
 }
 
-#learn-more:hover{
-  cursor: pointer;
+.portfolio-container iframe{
+  display: none;
 }
 
-.hooligin-web-image-container{
-  display: flex;
-  flex-direction: row;
-}
-
-.hooligin-web-image{
-    height: 250px;
-    width: 250px;
-    background-image: url('./Screen\ Shot\ 2020-09-09\ at\ 7.25.23\ PM.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: 20px;
-    margin-top: 50px;
-}
-
-
-.hooligin-web-image2{
-    height: 250px;
-    width: 250px;
-    background-image: url('./Screen\ Shot\ 2020-09-10\ at\ 7.03.33\ PM.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: 20px;
-    margin-top: 50px;
-}
-
-
-.hooligin-web-image3{
-    height: 250px;
-    width: 250px;
-    background-image: url('./Screen\ Shot\ 2020-09-10\ at\ 7.06.02\ PM.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: 50px;
-    margin-top: 50px;
-}
-
-
-.the-drop-container{
-  width: 93vw;
-  height: 70vh;
-  display: flex;
-  flex-direction: row;
-  text-align: start;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  margin-bottom: 40px;
-  box-shadow: 5px 10px 18px #888888;
-  -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    contain: content;
-}
-
-#next-project{
-  margin-bottom: 20px;
-  color: orange;
-}
-
-#next-project:hover{
-  cursor: pointer;
-}
-
-
-.the-drop-container iframe{
-    margin-left: 40px;
-    margin-top: 50px;
-}
-
-@-webkit-keyframes focus-in-expand-fwd {
+  @-webkit-keyframes focus-in-expand-fwd {
     0% {
       letter-spacing: -0.5em;
       -webkit-transform: translateZ(-800px);
@@ -181,172 +95,3 @@
       opacity: 1;
     }
   }
-
-  /* IPAD QUERIE */
-
-  @media(max-width: 1000px){
-    .portfolio-container{
-      height: 90vh;
-      width: 100vw;
-      font-family: Karla;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      overflow: scroll;
-  }
-  
-  
-  .hooligin-web-project{
-      width: 93vw;
-      height: 70vh;
-      display: flex;
-      flex-direction: row;
-      text-align: start;
-      align-items: flex-start;
-      justify-content: space-evenly;
-      margin-bottom: 40px;
-      box-shadow: 5px 10px 18px #888888;
-      -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      contain: content;
-  }
-  
-  .project-specs-container{
-    margin-left: -60px;
-  }
-  
-  #learn-more{
-    font-size: 25px;
-    margin-top: -10px;
-    color: orange;
-    font-weight: 600;
-  }
-  
-  
-  .hooligin-web-image-container{
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .hooligin-web-image{
-      height: 250px;
-      width: 250px;
-      background-image: url('./Screen\ Shot\ 2020-09-09\ at\ 7.25.23\ PM.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      margin-right: 20px;
-      margin-top: 50px;
-  }
-  
-  
-  .hooligin-web-image2{
-      display: none;
-  }
-  
-  
-  .hooligin-web-image3{
-      display: none;
-  }
-  
-  
-  .the-drop-container{
-    width: 93vw;
-    height: 70vh;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    margin-bottom: 40px;
-    box-shadow: 5px 10px 18px #888888;
-    -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      contain: content;
-  }
-  
-  #next-project{
-    margin-bottom: 20px;
-    color: orange;
-  }
-  
-  
-  .the-drop-container iframe{
-      margin-left: 40px;
-      margin-top: 50px;
-  }
-  }
-
-  /* IPHONE QUERIE */
-
-  @media(max-width: 500px){
-    .portfolio-container{
-      height: 90vh;
-      width: 100vw;
-      font-family: Karla;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      overflow: scroll;
-    }
-    .portfolio-header{
-      width: 100vw;
-      /* height: 45vh; */
-      margin-top: 0px;
-      margin-bottom: 60px;
-    }
-    
-    .hooligin-web-project{
-      width: 93vw;
-      height: 300px;
-      display: flex;
-      flex-direction: row;
-      text-align: start;
-      align-items: center;
-      justify-content: space-evenly;
-      margin-bottom: 40px;
-      box-shadow: 5px 10px 18px #888888;
-      -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      box-sizing: border-box;
-  }
-
-    .project-specs-container{
-      height: 600px;
-      width:90vw;
-      text-align: start;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding-left: 50px;
-    }
-    
-    .hooligin-web-image-container{
-      display: none;
-
-    }
-    
-
-    .the-drop-container{
-      width: 93vw;
-      height: 500px;
-      display: flex;
-      flex-direction: row;
-      text-align: start;
-      align-items: flex-start;
-      justify-content: space-evenly;
-      margin-bottom: 40px;
-      box-shadow: 5px 10px 18px #888888;
-      -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        contain: content;
-        box-sizing: border-box;
-    }
-
-
-    .the-drop-container iframe{
-      display: none;
-    }
-
-  }
-
-  
