--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  word-wrap: break-word;
   box-shadow: 5px 10px 18px #888888;
   -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	  animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
