removed height from portfolio

--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
 .portfolio-container{
-  height: 90vh;
+  /* height: 90vh; */
   width: 100vw;
   display: flex;
   align-items: center;
@@ -22,7 +22,6 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  word-wrap: break-word;
   box-shadow: 5px 10px 18px #888888;
   -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	  animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
